--- a/src/fablex/main/CMakeLists.txt
+++ b/src/fablex/main/CMakeLists.txt
@@ -10,6 +10,8 @@ add_executable(main ${MAIN_SRC})
 set_target_name_exe(main "fablex")
 set_engine_out_dir(main ${CMAKE_SOURCE_DIR}/bin)
 
+target_link_libraries(main core)
+
 target_include_directories(main 
     PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../
 	PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}
