Added basic reflection

--- a/src/fablex/renderer/CMakeLists.txt
+++ b/src/fablex/renderer/CMakeLists.txt
@@ -1,6 +1,8 @@
 file(GLOB RENDERER_SRC
     ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/*.h
+    ${CMAKE_CURRENT_SOURCE_DIR}/*/*.h
+    ${CMAKE_CURRENT_SOURCE_DIR}/*/*.cpp
 )
 
 source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES ${RENDERER_SRC})
