Added basic entity system.

--- a/src/fablex/main/CMakeLists.txt
+++ b/src/fablex/main/CMakeLists.txt
@@ -10,9 +10,10 @@ add_executable(main ${MAIN_SRC})
 set_target_name_exe(main "fablex")
 set_engine_out_dir(main ${CMAKE_SOURCE_DIR}/bin)
 
-target_link_options(main PRIVATE "/WHOLEARCHIVE:renderer.lib")
 target_link_options(main PRIVATE "/WHOLEARCHIVE:core.lib")
-target_link_libraries(main core rhi renderer)
+target_link_options(main PRIVATE "/WHOLEARCHIVE:engine.lib")
+target_link_options(main PRIVATE "/WHOLEARCHIVE:renderer.lib")
+target_link_libraries(main core rhi renderer engine)
 
 target_include_directories(main 
     PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../
