--- a/src/fablex/engine/CMakeLists.txt
+++ b/src/fablex/engine/CMakeLists.txt
@@ -9,7 +9,7 @@ source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES ${ENGINE_SRC})
 
 add_library(engine STATIC ${ENGINE_SRC})
 
-target_link_libraries(engine core)
+target_link_libraries(engine core asset_manager)
 
 target_include_directories(engine 
     PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../
