--- a/src/fablex/main/CMakeLists.txt
+++ b/src/fablex/main/CMakeLists.txt
@@ -13,7 +13,7 @@ set_engine_out_dir(main ${CMAKE_SOURCE_DIR}/bin)
 target_link_options(main PRIVATE "/WHOLEARCHIVE:core.lib")
 target_link_options(main PRIVATE "/WHOLEARCHIVE:engine.lib")
 target_link_options(main PRIVATE "/WHOLEARCHIVE:renderer.lib")
-target_link_libraries(main core rhi renderer engine asset_manager)
+target_link_libraries(main core rhi renderer engine editor asset_manager)
 
 target_include_directories(main 
     PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../
